[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ovam"
description = "Open-Vocabulary Attention Maps with Token Optimization for Semantic Segmentation in Diffusion Models"
requires-python = ">=3.8"
license = {text = "MIT"}
dynamic = ["version", "readme"]
dependencies = [
    "diffusers==0.31.0",
    "torch==2.5.1+cu124",
    "transformers==4.46.1", 
    "accelerate==1.2.1",
    "scipy==1.13.1",
    "safetensors==0.5.2",
    "numpy==1.26.4",
    "matplotlib==3.10.0",
    "SimpleCRF==0.2.1.1",
    "huggingface-hub==0.26.2",
    "transformers==4.46.1",
    "tokenizers==0.20.1"
]
authors = [
    {name="Pablo Marcos-Manchón", email="pmarcos@ub.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.urls]
homepage = "https://github.com/vpulab/ovam/"
repository = "https://github.com/vpulab/ovam/"


[tool.setuptools.packages.find]
include = ["ovam*"]

[tool.setuptools.dynamic]
version = {attr = "ovam.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}
